--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,20 +8,30 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.16",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.452.0",
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sonner": "^2.0.7",
     "swr": "2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.1.1"
   },
   "devDependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "shadcn-ui": "^0.9.5",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
